finished swagger documentation
