# app/Http/Controllers/Api/Lead/LeadController.php
@@ -3,22 +3,40 @@
 namespace App\Http\Controllers\Api\Lead;
 
 use App\Http\Controllers\Controller;
+use App\Http\Requests\ReportLeadConversionRequest;
+use App\Http\Requests\SaveLeadRequest;
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 
 class LeadController extends Controller
 {
     /**
-     * @OA\Info(title="Affzoo Api", version="0.1")
-     */
-
-    /**
      * @OA\Post(
      *     path="/api/v1/leads/save",
-     *     @OA\Response(response="200", description="Send lead to Affzoo system")
+     *     operationId="saveLead",
+     *     tags={"Leads"},
+     *     summary="The endpoint to save the lead in Affzoo system",
+     *     security={
+     *       {"apiAuth": {}},
+     *     },
+     *
+     *     @OA\Response(
+     *         response="200",
+     *         description="Lead has been saved",
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/SaveLeadRequest")
+     *     ),
      * )
+     * Store a newly created resource in storage.
+     *
+     * @param SaveLeadRequest $request
+     *
+     * @return JsonResponse
      */
 
-    public function save()
+    public function save(SaveLeadRequest $request)
     {
         return response('Ok', 200);
     }
@@ -26,8 +44,31 @@ class LeadController extends Controller
     /**
      * @OA\Get(
      *     path="/api/v1/leads/{id}/status",
-     *     @OA\Response(response="200", description="Get Lead Status")
+     *     operationId="getLeadStatus",
+     *     tags={"Leads"},
+     *     summary="The endpoint to get a status of the lead in Affzoo system",
+     *     security={
+     *       {"apiAuth": {}},
+     *     },
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="The ID of Lead",
+     *         required=true,
+     *         example="1",
+     *         @OA\Schema(
+     *             type="integer",
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         @OA\JsonContent(ref="#/components/schemas/GetLeadStatusResponse"),
+     *         description="Lead has been saved",
+     *     )
      * )
+     * Store a newly created resource in storage.
+     *
+     * @return JsonResponse
      */
 
     public function leadStatus()
@@ -35,15 +76,42 @@ class LeadController extends Controller
         return response('Ok', 200);
     }
 
-
-
     /**
      * @OA\Post(
      *     path="/api/v1/leads/{id}/report-conversion",
-     *     @OA\Response(response="200", description="Get lead conversion status from Brand CRM")
+     *     operationId="reportConversion",
+     *     tags={"Leads"},
+     *     summary="The endpoint to report the lead conversion",
+     *     security={
+     *       {"apiAuth": {}},
+     *     },
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="The ID of Lead",
+     *         required=true,
+     *         example="1",
+     *         @OA\Schema(
+     *             type="integer",
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         @OA\JsonContent(ref="#/components/schemas/GetLeadStatusResponse"),
+     *         description="Lead status changed",
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/ReportLeadConversionRequest")
+     *     ),
      * )
+     * Store a newly created resource in storage.
+     *
+     * @param ReportLeadConversionRequest $request
+     *
+     * @return JsonResponse
      */
-    public function reportConversion()
+    public function reportConversion(ReportLeadConversionRequest $request)
     {
         return response('Ok', 200);
     }
