# app/Http/Controllers/Controller.php
@@ -7,6 +7,36 @@ use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 
+/**
+ * @OA\Info(
+ *     title="Laravel Swagger API documentation example",
+ *     version="1.0.0",
+ *     @OA\Contact(
+ *         email="admin@example.com"
+ *     ),
+ *     @OA\License(
+ *         name="Apache 2.0",
+ *         url="http://www.apache.org/licenses/LICENSE-2.0.html"
+ *     )
+ * )
+ * @OA\Tag(
+ *     name="Examples",
+ *     description="Some example pages",
+ * )
+ * @OA\Server(
+ *     description="Laravel Swagger API server",
+ *     url="http://localhost/api"
+ * )
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     name="Token based Based",
+ *     in="header",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     securityScheme="apiAuth",
+ * )
+ */
+
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
