# app/Http/Requests/SaveLeadRequest.php
@@ -1,0 +1,41 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class SaveLeadRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'name' => 'string|string',
+            'first_name' => 'required|string',
+            'last_name' => 'required|string',
+            'email' => 'required|string',
+            'address' => 'required|string',
+            'post_code' => 'required|string',
+            'country' => 'required|string',
+            'phone_number' => 'required|string',
+            'promo_code' => 'required|string',
+            'password' => 'required|string',
+            'currency' => 'required|string',
+
+        ];
+    }
+}
