# routes/api.php
@@ -17,7 +17,7 @@ use Illuminate\Support\Facades\Route;
 Route::post('/v1/users/login', [\App\Http\Controllers\Api\Auth\AuthController::class, 'login']);
 
 Route::middleware(['auth:sanctum'])->group(function () {
-    Route::post('/v1/leads', [\App\Http\Controllers\Api\Lead\LeadController::class, 'save']);
+    Route::post('/v1/leads/save', [\App\Http\Controllers\Api\Lead\LeadController::class, 'save']);
     Route::get('/v1/leads/{id}/status', [\App\Http\Controllers\Api\Lead\LeadController::class, 'leadStatus']);
     Route::post('/v1/leads/{id}/report-conversion', [\App\Http\Controllers\Api\Lead\LeadController::class, 'reportConversion']);
 });
